--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,11 @@
 {% endblock %}
 
 {% block main %}
-    <!--Icon ideas Book Fox-->
-    <!--https://www.flaticon.com/packs/graphic-designer-22-->
+    
     <div class="container">
         <div class="row">
-            <div class="left col-sm-6">
-                <img src="../static/editorial.svg" alt="book-fox" height=400px>
+            <div id="index-left" class="left col-sm-6">
+                <img src="../static/editorial.svg" alt="book-fox">
             </div>
             <div class="right col-sm-6">
                 <h1>Welcome to Book Fox</h1>
@@ -20,12 +19,12 @@
                 <div id="sign-in">
                     <form>
                         <div class="username">
-                            <label for="exampleInputEmail1">Email address</label><br>
-                            <input id="exampleInputEmail1">
+                            <label for="index-user">Username</label><br>
+                            <input name="user" id="index-user">
                         </div>
                         <div class="password">
-                            <label for="exampleInputPassword1">Password</label><br>
-                            <input type="password" id="exampleInputPassword1">
+                            <label for="index-pass">Password</label><br>
+                            <input name="pass" type="password" id="index-pass">
                         </div>
                         <button type="button" class="btn btn-dark">Login</button>
                     </form>
