--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
+
+    <!--Fox Icon Documentation-->
+    <!--https://www.flaticon.com/packs/graphic-designer-22-->
+    <link rel="icon" href="../static/editorial.svg">
+
     <title>Book Fox: {% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -27,8 +32,6 @@
         </div>
     </nav>
 
-    <!--Fox Icon Documentation-->
-    <!--https://www.flaticon.com/packs/graphic-designer-22-->
     <main class="main-container">
         {% block main %}{% endblock %}
     </main>
