Created apology flash

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div id="index-left" class="left col-sm-6">
-                <img src="../static/editorial.svg" alt="book-fox">
+                <img src="../static/editorial.svg" alt="book-fox" />
             </div>
             <div class="right col-sm-6">
                 <h1>Welcome to Book Fox</h1>
