--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
+    <footer style="font-size: medium;">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></footer>
     
     <!--Bootstrap JS-->
