--- a/templates/results.html
+++ b/templates/results.html
@@ -11,8 +11,11 @@
 
         <div class="header">
             <h1>Results<img src="../static/results.svg" alt="fox" height=60px /></h1>
-            <p>Some information about results.</p>
-            <p>Some more information about results.</p>
+            <p>You searched for the {{ option }}: "{{ search }}"</p>
+            <p>Click on any book's title to see the reviews for that book. 
+                Click on a book's ISBN to get data in JSON format for that book. 
+                Please note the maximum number of books listed will be 50.
+            </p>
         </div>
     </div>
 
