--- a/templates/apology.html
+++ b/templates/apology.html
@@ -10,8 +10,14 @@
     <div class="row">
         <div class="header">
             <h1>We are sorry!<img src="../static/apology.svg" alt="fox" height=60px /></h1>
-            <p>Some information about apologizing. {{ msg }}</p>
-            <p>Hey did you forget to sign in? If you haven't registered yet feel free to do so <a href="/register">here</a></p>
+            {% if msg %}
+            <p>{{ msg }}</p>
+            {% else %}
+                <p>Forget to sign in? Return back <a href="/">home</a> in order to log in!</p>
+                <p>If you haven't registered yet feel free to do so <a href="/register">here</a>. 
+                This will allow you to search our database of 5,000 books, read reviews by readers like you, 
+                and add your own reviews.</p>
+            {% endif %}
         </div>
     </div>
 </div>
