--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,9 @@
                 {% if apology %}
                     <p>{{ apology }}</p>
                 {% endif %}
-                <p>Some text here describing what to do</p>
+                <p>Hello! You can search our database of 5,000 books, read reviews by readers like you,
+                    and add your own reviews.
+                </p>
                 <p>To get started, log in or <a href="/register">register</a></p>
 
                 <div id="sign-in">
