--- a/templates/register.html
+++ b/templates/register.html
@@ -11,8 +11,9 @@
         <div id="left" class="left col-sm-6">
             <div class="header">
                 <h1>Register<img src="../static/save.svg" alt="fox" height=60px /></h1>
-                <p>Some information about registering.</p>
-                <p>Some more information about registering.</p>
+                <p>Please register to be able to search our database of 5,000 books, 
+                    read reviews by readers like you, and add your own reviews.</p>
+                <p>Registration is free!</p>
                 <!--If username already taken-->
                 {% if True %}
                 <div class="apology">
