Updated forms and created apology flashes

--- a/templates/apology.html
+++ b/templates/apology.html
@@ -11,7 +11,7 @@
         <div class="header">
             <h1>We are sorry!<img src="../static/apology.svg" alt="fox" height=60px /></h1>
             {% if msg %}
-            <p>{{ msg }}</p>
+            <p class="apology">{{ msg }}</p>
             {% else %}
                 <p>Forget to sign in? Return back <a href="/">home</a> in order to log in!</p>
                 <p>If you haven't registered yet feel free to do so <a href="/register">here</a>. 
