--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 </p>
                 <p>To get started, log in or <a href="/register">register</a></p>
 
-                <div id="sign-in">
+                <div class="myForms">
                     <!--Redirect to search upon completion, error handling done at that route-->
                     <form action="#" method="post">
                         <div class="username">
