Updated reviews page

--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -26,7 +26,7 @@
             <div>
                 <ul>
                     <li>User: {{ users[0][0] }}</li>
-                    <li>Score: {{ review[0] }}.5</li>
+                    <li>Score: {{ review[0] }}/5</li>
                     <li>Review: {{ review[1] }}</li>
                 </ul>
             </div>
